--- a/.github/workflows/deployAWS.yml
+++ b/.github/workflows/deployAWS.yml
@@ -101,6 +101,8 @@ jobs:
 
       - name: Set environment variables
         run: |
+            echo "Live directory: ${{ env.live_dir }}"
+            cat ${{ env.live_dir }}/s3/s3_bucket.txt
             export S3_BUCKET_NAME=$(cat ${{ env.live_dir }}/s3/s3_bucket.txt)
             export CLOUDFRONT_URL=$(cat ${{ env.live_dir }}/cloudfront/cloudfront_id.txt)
 
