changing the approach, adding new python file

--- a/.github/workflows/deployAWS.yml
+++ b/.github/workflows/deployAWS.yml
@@ -98,43 +98,25 @@ jobs:
 
       - name: Set environment variables
         run: |
+            
+            export OWNER=${{ env.owner }}
+            export REPO=${{ env.repo }}
+            export TOKEN=${{ env.token }}
             echo "Live directory: ${{ env.live_dir }}"
-            cat ${{ env.live_dir }}/s3/s3_bucket.txt
+            echo 'Owner: ${OWNER}'
+            echo 'Repo: ${REPO}'
+            echo 'Token: ${TOKEN}'
             export S3_BUCKET_NAME=$(cat ${{ env.live_dir }}/s3/s3_bucket.txt)
             export CLOUDFRONT_URL=$(cat ${{ env.live_dir }}/cloudfront/cloudfront_id.txt)
 
       - name: Set the repo var
         run: |
-          python - <<EOF
-          import os
-          import requests
-          api_version = "2022-11-28"
-          owner = os.environ.get("OWNER")
-          repo = os.environ.get("REPO")
-          token = os.environ.get("TOKEN")
-          S3_BUCKET_NAME = os.environ.get("S3_BUCKET_NAME")
-          
-          url_post = f"https://api.github.com/repos/{owner}/{repo}/actions/variables"
-          headers = {
-              "Accept": "application/vnd.github+json",
-              "Authorization": f"Bearer {token}",
-              "X-GitHub-Api-Version": api_version
-          }
-
-          data = {
-              "name": "S3",
-              "value": f'"{S3_BUCKET_NAME}"'
-          }
-
-          response_post = requests.post(url_post, headers=headers, json=data)
-          if response_post.status_code == 201:
-              print("Variable created successfully.")
-          else:
-              print(f"Error: {response_post.status_code} - {response_post.text}")
-          EOF
+          python3 set_var_repo.py
       - name: run python script
         run: |
           python3 app/main.py
+
+        
 
 
 
