--- a/.github/workflows/deployAWS.yml
+++ b/.github/workflows/deployAWS.yml
@@ -99,12 +99,10 @@ jobs:
       - name: Set environment variables
         run: |
             
-            export OWNER=${{ env.owner }}
-            export REPO=${{ env.repo }}
-            export TOKEN=${{ env.token }}
+            export OWNER=$(echo ${{ env.owner }})
+            export REPO=$(echo ${{ env.repo }})
+            export TOKEN=$(echo ${{ env.token }})
             echo "Live directory: ${{ env.live_dir }}"
-            echo $OWNER
-            echo $REPO
             export S3_BUCKET_NAME=$(cat ${{ env.live_dir }}/s3/s3_bucket.txt)
             export CLOUDFRONT_URL=$(cat ${{ env.live_dir }}/cloudfront/cloudfront_id.txt)
 
