--- a/.github/workflows/deployAWS.yml
+++ b/.github/workflows/deployAWS.yml
@@ -71,7 +71,15 @@ jobs:
         uses: gruntwork-io/terragrunt-action@v2
         env: 
           INPUT_POST_EXEC_1: |
-            echo "$(terragrunt output -raw aws_cloudfront_distribution_URL | tr -d '"')" > cloudfront_id.txt
+            CLOUDFRONT_URL=$(terragrunt output -raw aws_cloudfront_distribution_URL | tr -d '"')
+          INPUT_POST_EXEC_2: |
+            curl -L \
+              -X POST \
+              -H "Accept: application/vnd.github+json" \
+              -H "Authorization: Bearer ${{ env.token }}" \
+              -H "X-GitHub-Api-Version: 2022-11-28" \
+              https://api.github.com/repos/${{ env.owner }}/${{ env.repo }}/actions/variables \
+              -d '{"name":"cloudfront_url","value":"$CLOUDFRONT_URL"}'
         with:
           tf_version: ${{ env.tf_version }}
           tg_version: ${{ env.tg_version }}
