--- a/.github/workflows/deployAWS.yml
+++ b/.github/workflows/deployAWS.yml
@@ -71,7 +71,7 @@ jobs:
         uses: gruntwork-io/terragrunt-action@v2
         env: 
           INPUT_POST_EXEC_1: |
-            CLOUDFRONT_URL=$(terragrunt output -raw aws_cloudfront_distribution_URL | tr -d '"')
+            export CLOUDFRONT_URL=$(terragrunt output -raw aws_cloudfront_distribution_URL | tr -d '"')
           INPUT_POST_EXEC_2: |
             curl -L \
               -X POST \
@@ -79,7 +79,7 @@ jobs:
               -H "Authorization: Bearer ${{ env.token }}" \
               -H "X-GitHub-Api-Version: 2022-11-28" \
               https://api.github.com/repos/${{ env.owner }}/${{ env.repo }}/actions/variables \
-              -d '{"name":"cloudfront_url","value":"$CLOUDFRONT_URL"}'
+              -d '{"name":"cloudfront_url","value":"${CLOUDFRONT_URL}"}'
         with:
           tf_version: ${{ env.tf_version }}
           tg_version: ${{ env.tg_version }}
