--- a/.github/workflows/deployAWS.yml
+++ b/.github/workflows/deployAWS.yml
@@ -12,8 +12,6 @@ env:
   repo: "p81-CloudFront"
   api_version: "2022-11-28"
   token: ${{ secrets.GIT_TOKEN }}
-  s3_name: "S3"
-  cloud_front_url: "CLOUDFRONT_URL"
 
   
 jobs:
@@ -49,9 +47,6 @@ jobs:
 
       - name: apply s3 - terragrunt
         uses: gruntwork-io/terragrunt-action@v2
-        env: 
-          INPUT_POST_EXEC_1: |
-            echo "$(terragrunt output aws_s3_bucket | tr -d '"')" > s3_bucket.txt
         with:
           tf_version: ${{ env.tf_version }}
           tg_version: ${{ env.tg_version }}
@@ -74,12 +69,12 @@ jobs:
             export CLOUDFRONT_URL=$(terragrunt output -raw aws_cloudfront_distribution_URL | tr -d '"')
           INPUT_POST_EXEC_2: |
             curl -L \
-              -X POST \
+              -X PATCH \
               -H "Accept: application/vnd.github+json" \
               -H "Authorization: Bearer ${{ env.token }}" \
               -H "X-GitHub-Api-Version: 2022-11-28" \
-              https://api.github.com/repos/${{ env.owner }}/${{ env.repo }}/actions/variables \
-              -d '{"name":"cloudfront_url","value": "'"$CLOUDFRONT_URL"'"}'
+              https://api.github.com/repos/${{ env.owner }}/${{ env.repo }}/actions/variables/CLOUDFRONT_URL \
+              -d '{"name":"CLOUDFRONT_URL","value":"'"$CLOUDFRONT_URL"'"}'
         with:
           tf_version: ${{ env.tf_version }}
           tg_version: ${{ env.tg_version }}
@@ -104,21 +99,6 @@ jobs:
           tg_dir: ${{ env.live_dir }}/policy
           tg_command: 'apply'
 
-      - name: Set environment variables
-        run: |
-            
-            export OWNER=${{ env.owner }}
-            echo $OWNER
-            export REPO=${{ env.repo }}
-            echo $REPO
-            export TOKEN=${{ env.token }}
-            echo "Live directory: ${{ env.live_dir }}"
-            export S3_BUCKET_NAME=$(cat ${{ env.live_dir }}/s3/s3_bucket.txt)
-            export CLOUDFRONT_URL=$(cat ${{ env.live_dir }}/cloudfront/cloudfront_id.txt)
-
-      - name: Set the repo var
-        run: |
-          python3 app/set_var_repo.py
       - name: run python script
         run: |
           python3 app/main.py
