--- a/.github/workflows/download_file.yml
+++ b/.github/workflows/download_file.yml
@@ -6,6 +6,8 @@ jobs:
     download:
       runs-on: ubuntu-latest
       steps:
+      - name: Checkout
+        uses: actions/checkout@v3
       - name: Run Python Script
         run: |
           python3 app/main.py
