--- a/.github/workflows/download_file.yml
+++ b/.github/workflows/download_file.yml
@@ -10,5 +10,6 @@ jobs:
         uses: actions/checkout@v3
       - name: Run Python Script
         run: |
+          export CLOUDFRONT_URL=${{ env.CLOUDFRONT_URL }}
           python3 app/main.py
         
