--- a/.github/workflows/download_file.yml
+++ b/.github/workflows/download_file.yml
@@ -10,7 +10,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Run Python Script
         run: |
-          export CLOUDFRONT_URL="'"${{ env.CLOUDFRONT_URL }}"'"
+          export CLOUDFRONT_URL=${{ vars.CLOUDFRONT_URL }}
           echo $CLOUDFRONT_URL
           python3 app/main.py
         
